# docs/swagger.yaml
@@ -105,7 +105,38 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/response.Response'
-  /section/book/{bookId}:
+  /section/list:
+    get:
+      consumes:
+      - application/json
+      description: 章节列表
+      parameters:
+      - description: "1"
+        in: query
+        name: pageNum
+        required: true
+        type: integer
+      - description: "10"
+        in: query
+        name: pageSize
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          headers:
+            x-token:
+              description: qwerty
+              type: string
+          schema:
+            $ref: '#/definitions/response.Response'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/response.Response'
+  /section/list/{bookId}:
     get:
       consumes:
       - application/json
@@ -131,20 +162,15 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/response.Response'
-  /section/list:
+  /section/one/{sectionId}:
     get:
       consumes:
       - application/json
-      description: 章节列表
+      description: 查询书下所有章节信息
       parameters:
       - description: "1"
-        in: query
-        name: pageNum
-        required: true
-        type: integer
-      - description: "10"
-        in: query
-        name: pageSize
+        in: path
+        name: sectionId
         required: true
         type: integer
       produces:
